Fix double scroll in container logs

--- a/src/apps/Containers/Details/Container/Container.module.sass
+++ b/src/apps/Containers/Details/Container/Container.module.sass
@@ -28,7 +28,7 @@
     gap: 20px
     width: 100%
     padding: 20px 0
-    max-height: calc(100vh - 320px)
+    max-height: calc(100vh - 330px)
 
     & > *
         margin: 0 20px
